      - Bio science can use productivity modules
      - Renamed Lab 2 to Exoplanetary Studies Lab
      - Changed recipe and energy consumption of Exoplanetary Studies Lab
    - Added missing tech prerequisites #252, #265
    - Added purple and yellow science packs to Radio Thermoelectric Generator tech #252
    - Renamed recipes and entities containing the word "coal" #252
    - Compatibility changes for Bob's mods 1.1.5 #262
  Bugfixes:
    - Lab 2 could not be researched (without SCT) #244
    - Error when using custom colors for tiers with Artisanal Reskins #251
    - Some disabled techs were not being hidden #252
    - Fixed setting "SpaceX ignore tech price multiplier" #256
    - Made SpaceX Drydock Assembly Component use modular roboports if regular roboports are disabled #261
---------------------------------------------------------------------------------------------------
Version: 0.5.10
Date: 30.12.2021
  Bugfixes:
    - Lithium Processing could not be researched #246
---------------------------------------------------------------------------------------------------
Version: 0.5.9
Date: 19.12.2021
  Changes:
    - Added setting to give each player their own set of starting items #242
    - Compatibility changes for latest Angel's mods #210
    - Increased output of Thermal water bore from 5 to 20 Thermal water #241
  Bugfixes:
    - Fixed Chlorine Processing 4 tech cost #210
---------------------------------------------------------------------------------------------------
Version: 0.5.8
Date: 05.12.2021
  Changes:
    - Added Companion Drones compatibility #108
    - Wood bricks now have a fuel value of 18MJ #216
    - Adjusted Plasma turret recipes #218
    - Moved perchlorate recipes to new tech Chlorine Processing 4 #218
    - Advanced farming recipes now require specialized farms #226
    - Adjusted farming tech prerequisites #226
    - Other minor tweaks #220
    - Science Cost Tweaker: #232