@@ -57,10 +57,6 @@ sb-lab-tool=Craft a lab to complete this research
 [mod-setting-name]
 sb-default-landfill=Default landfill type
 bobmods-assembly-multipurposefurnaces=Recipe furnaces
-sb-multiplayer-start=Multiplayer starting items
-
-[mod-setting-description]
-sb-multiplayer-start=Give each player their own set of starting items
 
 [string-mod-setting]
 sb-default-landfill-landfill-dirt-4=[img=item/landfill-dirt-4]Dirt
